--- a/content/04-explore-cardano/02-eras-and-phases.mdx
+++ b/content/04-explore-cardano/02-eras-and-phases.mdx
@@ -69,4 +69,4 @@ It is important to understand that not all of the semantic changes to the Cardan
 
 Note that the protocol version is unrelated to the node-to-node and node-to-client protocol versions. The consensus layer maintains a versioning scheme for the node queries that does not necessarily align with the protocol version described in this overview.
 
-The protocol version is also included in each block header indicating the maximum protocol version that the block producer is capable of supporting (see section 13, Software Updates, of the [Shelley ledger specification](https://hydra.iohk.io/job/Cardano/cardano-ledger/shelleyLedgerSpec/latest/download-by-type/doc-pdf/ledger-spec)).
+The protocol version is also included in each block header indicating the maximum protocol version that the block producer is capable of supporting.
