--- a/content/12-smart-contracts/01-plutus/04-dapp-development.mdx
+++ b/content/12-smart-contracts/01-plutus/04-dapp-development.mdx
@@ -19,7 +19,7 @@ A smart contract (which consists of different scripts) is the driving force behi
 
 ![plutus-architecture](https://ucarecdn.com/09beeb4d-ca98-4460-8d2f-b639a69cf156/)
 
-You can also learn about [Plutus contracts off-chain and on-chain components here](https://docs.cardano.org/plutus/learn-about-plutus/#plutussmartcontracts).
+You can also learn about [Plutus contracts off-chain and on-chain components here](https://docs.cardano.org/smart-contracts/plutus/learn-about-plutus/#plutussmartcontracts).
 
 1.  First, developers write the **source code** for the DApp.
 2.  Written in Haskell, this code goes through the **compiler pipeline** process. The code is first turned into *Plutus IR* (intermediate representation) to make it more efficient and then optimized in terms of performance. *Typed Plutus Core* is the next stage in the compiler pipeline, which helps to make additional checks and code debugging. Finally, the code is turned into *Untyped Plutus Core* – a lambda calculus variable. Untyped Plutus Core, or the compiled application, is executed on-chain.    
@@ -41,7 +41,7 @@ To build a DApp using Plutus, developers will need to use a set of tooling and l
 Different tools are essential for developers to deploy a DApp. The code can be written not only using the Plutus Core language but also other Plutus variations. For more details, see the Plutus tools overview and the open-source tooling:
 
 -   [Plutus tools overview](https://plutus-apps.readthedocs.io/en/latest/plutus/explanations/plutus-tools-component-descriptions.html)
--   [Open source tooling](https://docs.cardano.org/plutus/plutus-resources/#plutusopensourcetooling)
+-   [Open source tooling](https://docs.cardano.org/smart-contracts/plutus/plutus-resources/#plutustooling)
     
 You can find different Plutus application use cases here:
 
@@ -65,7 +65,7 @@ The complete [Plutus tools user guide](https://plutus-apps.readthedocs.io/en/lat
 - [How to write a scalable Plutus app](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/writing-a-scalable-app.html)
 - [How to handle blockchain events](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/handling-blockchain-events.html)
 - [How to analyze the cost and size of Plutus scripts](https://plutus-apps.readthedocs.io/en/latest/plutus/howtos/analysing-scripts.html)
-- [Plutus scripts](https://docs.cardano.org/plutus/plutus-scripts)
+- [Plutus scripts](https://docs.cardano.org/smart-contracts/plutus/plutus-scripts/)
 - [Troubleshooting](https://plutus-apps.readthedocs.io/en/latest/plutus/troubleshooting.html)
 
 **Formal specifications**
@@ -79,7 +79,7 @@ The complete [Plutus tools user guide](https://plutus-apps.readthedocs.io/en/lat
 
 Are you a developer building on Cardano with Plutus? Have you produced tutorials, tips or guidelines on how to build a Plutus DApp? We welcome your contributions! Please don’t hesitate to open a pull request and add a link to your tooling or development tutorials.
 
--   [A list of community-driven Plutus open-source tooling](https://docs.cardano.org/plutus/plutus-resources/#plutuscommunityresources)
+-   [A list of community-driven Plutus open-source tooling](https://docs.cardano.org/smart-contracts/plutus/plutus-resources/#plutuscommunityresources)
 -   [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
 -   [Demeter Run](https://demeter.run/): a cloud environment with all the tools for building a DApp on Cardano
 -   [Mesh](https://mesh.martify.io/): an open-source library for building Web3 applications on Cardano with ease.
