--- a/content/08-cardano-components/10-cardano-serialization-lib.mdx
+++ b/content/08-cardano-components/10-cardano-serialization-lib.mdx
@@ -26,12 +26,7 @@ If you are looking for legacy bindings, you can find them at:
 
 **Original binary specifications**
 
-You can find original [CDDL](https://cbor.io/tools.html) specifications at:
-
-+ Byron: [link](https://github.com/input-output-hk/cardano-ledger-specs/tree/master/eras/byron/cddl-spec)
-+ Shelley: [link](https://github.com/input-output-hk/cardano-ledger/blob/master/eras/shelley/test-suite/cddl-files/shelley.cddl)
-+ Mary: [link](https://github.com/input-output-hk/cardano-ledger/blob/master/eras/shelley-ma/test-suite/cddl-files/shelley-ma.cddl)
-+ Alonzo: [link](https://github.com/input-output-hk/cardano-ledger/tree/master/eras/alonzo/test-suite/cddl-files)
+You can find original [CDDL](https://cbor.io/tools.html) specifications [here](https://github.com/input-output-hk/cardano-ledger#readme).
 
 ## Instructions
 
