--- a/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/06-transferring-tokens.mdx
+++ b/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/06-transferring-tokens.mdx
@@ -213,7 +213,7 @@ Understanding this command:
 
 The transaction will be stable on the main chain in approximately 12 minutes or 36 blocks. The sidechain will then add it to a produced block and the tokens should appear in the sidechain-account balance:
 
-- Check `SC_Token` token balance using the [JSON-RPC API](/cardano-sidechains/example-evm-sidechains/api): 
+- Check `SC_Token` token balance using the JSON-RPC API: 
 
 ```shell
 curl -L -X POST https://localhost:8546 -H 'Content-type:application/json' -d '{
