--- a/content/03-learn/06-pledging-and-delegation-options.mdx
+++ b/content/03-learn/06-pledging-and-delegation-options.mdx
@@ -15,9 +15,7 @@ There are three options ada holders can consider for delegating their stake:
 2. Agree with a third party to run a private stake pool for them
 3. Delegate to other stake pools
 
-To create and register a stake pool, see the
-[create transaction instructions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/4_simple_transaction.md)
-explaining how to pledge and delegate to earn rewards.
+To create and register a stake pool, see [these instructions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/8_register_stakepool.md).
 
 Stake pools must maintain **high-availability**, which means that they should
 *always* be online and available to validate and create new blocks. The rewards a
