Fixed dead link: Metamask

--- a/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -15,7 +15,7 @@ This tutorial will show you how to deploy a Solidity smart contract to the EVM s
 
 ## Prerequisites
 
-In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](../metamask) and fund your wallet with testnet tokens using the [SC_EVM Faucet](https://github.com/input-output-hk/sc-evm-faucet-web).
+In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](../../metamask) and fund your wallet with testnet tokens using the [SC_EVM Faucet](https://github.com/input-output-hk/sc-evm-faucet-web).
 
 ## Step 1 - Configure Remix
 
