Update an image
Resolves #557

--- a/content/02-new-to-cardano/01-what-is-a-blockchain.mdx
+++ b/content/02-new-to-cardano/01-what-is-a-blockchain.mdx
@@ -28,7 +28,7 @@ as an information holder:
 Let’s take a closer look at existing data storage solutions to understand the
 difference between these systems:
 
-![data-storage](data-storage.png)
+![data-storage](https://ucarecdn.com/af01444d-6881-4aab-a0a9-ec2ff6a0ea40/)
 
 + **Centralized systems** — all data entries and activities are usually managed using one central server. This increases the risk of a single point of failure, and also means that the controlling entity (such as banks or government institutions, for example) act as decision-makers.
 + **Distributed systems** — generally rely on multiple server nodes, each of which serves a subset of the total end clients.
