--- a/content/05-cardano-testnet/07-resources/01-links.mdx
+++ b/content/05-cardano-testnet/07-resources/01-links.mdx
@@ -3,7 +3,7 @@ title: Links
 metaTitle: Links
 ---
 
-You may find these web materials and videos useful:
+## Useful materials
 
 * [Vasil testnet tutorials](https://github.com/input-output-hk/Vasil-testnet)
 * [Alonzo testnet tutorials](https://github.com/input-output-hk/Alonzo-testnet/tree/main/Alonzo-tutorials)
@@ -14,7 +14,7 @@ You may find these web materials and videos useful:
 * [Cardano Stack Exchange](https://cardano.stackexchange.com/)
 * [Cardano Discord channel](https://discord.com/channels/826816523368005654/826829738156621895)
 
-**Blog posts**
+## Blog posts
 
 IOG’s researchers and engineers often post on [IO blog page](https://iohk.io/en/blog/posts/page-1/). Here are a couple of posts which you may find helpful:
 
@@ -26,3 +26,16 @@ IOG’s researchers and engineers often post on [IO blog page](https://iohk.io/e
 * *[Increasing the transaction throughput of Cardano](https://iohk.io/en/blog/posts/2022/03/21/increasing-the-transaction-throughput-of-cardano/)*
 * *[How we're scaling Cardano in 2022](https://iohk.io/en/blog/posts/2022/01/14/how-we-re-scaling-cardano-in-2022/)*
 * *[Cardano’s approaching Vasil upgrade: what to expect](https://iohk.io/en/blog/posts/2022/07/04/cardano-s-approaching-vasil-upgrade-what-to-expect/)*
+
+## Community content
+
+* [Guild operator guide](https://cardano-community.github.io/guild-operators)
+* [Big pey's stake pool video tutorials](https://www.youtube.com/playlist?list=PLyThQPJpttTJ4r9wUdlWi1DMty4nAT85d)
+* [Creating a private testnet using Docker](https://github.com/ItFlyingStart/shelley-private-testnet)
+* [Useful setup scripts](https://github.com/gitmachtl/scripts/tree/master/cardano)
+* [Video guide: how to create a Cardano stake pool](https://www.youtube.com/playlist?list=PLyThQPJpttTJ4r9wUdlWi1DMty4nAT85d)
+* [Building a Cardano stake pool using CNTools](https://www.youtube.com/watch?v=UN4rSRr7LDk&feature=youtu.be)
+* [Vasil hard fork changes explained](https://www.youtube.com/watch?v=Tsp9F23dBiM) by dcSpark
+
+If you have produced material and would like to contribute your content for inclusion on this page, please raise a pull request.
+
