Update links to CIPs

--- a/content/04-explore-cardano/12-parameter-guide.mdx
+++ b/content/04-explore-cardano/12-parameter-guide.mdx
@@ -58,4 +58,4 @@ Updatable parameters are designed to be flexible and adaptable, allowing the net
 
 You can find a [list of non-updatable protocol parameters here](https://github.com/cardano-foundation/CIPs/blob/master/CIP-0009/README.md#non-updatable-parameters).
 
-[CIP-09](https://cips.cardano.org/cips/cip9/), [CIP-28,](https://cips.cardano.org/cips/cip28/) and [CIP-55](https://cips.cardano.org/cips/cip55/) provide an overview of protocol parameters in the Shelley, Alonzo, and Babbage eras.
+[CIP-09](https://cips.cardano.org/cip/CIP-0009), [CIP-28,](https://cips.cardano.org/cip/CIP-0028) and [CIP-55](https://cips.cardano.org/cip/CIP-0055) provide an overview of protocol parameters in the Shelley, Alonzo, and Babbage eras.
