Update links to CIPs

--- a/content/03-learn/11-about-hard-forks.mdx
+++ b/content/03-learn/11-about-hard-forks.mdx
@@ -119,7 +119,7 @@ Such capability is enabled by adding the necessary tools and the infrastructure 
 
 ### Vasil: Plutus 2.0 and the debut of pipelining
 
-Vasil is the protocol upgrade which will be implemented in June 2022. Named after the late Bulgarian mathematician and prominent Cardano community member Vasil Dabov, the Vasil upgrade introduces five key mechanisms to improve the blockchain's performance: [CIP-31](https://cips.cardano.org/cips/cip31/) (Reference Inputs), [CIP-32](https://cips.cardano.org/cips/cip32/) (Inline Datums), [CIP-33](https://cips.cardano.org/cips/cip33/) (Reference Scripts ), CIP-40 (Collateral Outputs), and diffusion pipelining.
+Vasil is the protocol upgrade which will be implemented in June 2022. Named after the late Bulgarian mathematician and prominent Cardano community member Vasil Dabov, the Vasil upgrade introduces five key mechanisms to improve the blockchain's performance: [CIP-31](https://cips.cardano.org/cip/CIP-0031) (Reference Inputs), [CIP-32](https://cips.cardano.org/cip/CIP-0032) (Inline Datums), [CIP-33](https://cips.cardano.org/cip/CIP-0033) (Reference Scripts ), [CIP-40](https://cips.cardano.org/cip/CIP-0040) (Collateral Outputs), and diffusion pipelining.
 
 These improvements boost Cardano's usability and scalability by increasing the block size limit to fit more transactions per block. Developers will have a better experience while building on Cardano as Vasil will greatly reduce the complexity of creating and deploying DApps on Cardano.
 
