Update links to CIP-59

--- a/content/04-explore-cardano/02-eras-and-phases.mdx
+++ b/content/04-explore-cardano/02-eras-and-phases.mdx
@@ -3,7 +3,7 @@ title: Development phases and eras on Cardano
 metaTitle: Development phases and eras on Cardano
 ---
 
-> This overview is based on [CIP 59](https://cips.cardano.org/cips/cip59/).
+> This overview is based on [CIP-59](https://cips.cardano.org/cip/CIP-0059).
 
 Cardano’s development follows a well-defined and clearly communicated roadmap. Firmly based on academic research and rigorous testing, this process has resulted in a chain with zero outages.
 
@@ -61,7 +61,7 @@ You can see a table with Cardano’s phases, eras, and intra-era hard forks visu
 
 ![phases-eras-table](https://ucarecdn.com/17dfdeb2-0f39-4b21-989d-18c64d5494ee/)
 
-Image source: [CIP-59 Cardano features annex](https://cips.cardano.org/cips/cip59/feature-table.md.html)
+Image source: [CIP-59 Cardano features annex](https://github.com/cardano-foundation/CIPs/blob/master/CIP-0059/feature-table.md)
 
 ## Conclusion
 
