--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -34,7 +34,7 @@ Also, note that:
 
 -  With the Vasil hard fork on mainnet, the *d* parameter is removed and block production is now fully decentralized. This prevents re-federation.
 -   If you are an SPO, you now need to create your operational certificate using cold.counter +1. The `OpCert` must be exactly one more than the previously used one. [See details here](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/7_KES_period.md#warning-vasil-hard-fork-breaking-changes)
--   The `minUTxO` formula is now calculated using original bytes instead of `lovelacePerUTxOWord`. For more details, see [CIP-55](https://cips.cardano.org/cips/cip55/).
+-   The `minUTxO` formula is now calculated using original bytes instead of `lovelacePerUTxOWord`. For more details, see [CIP-55](https://cips.cardano.org/cip/CIP-0055).
 
 **Feedback**
 
