--- a/content/15-tools/02-release-notes.mdx
+++ b/content/15-tools/02-release-notes.mdx
@@ -11,17 +11,17 @@ Cardano node configuration details (for mainnet and testnets) are available on t
 
 ## Latest Cardano component releases
 
-Name | Version | Release Date
+Name | Version | Release date
 -|-|-
-[Cardano Node](https://github.com/input-output-hk/cardano-node) | [8.1.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.2) | 24 July, 2023
+[Cardano node](https://github.com/input-output-hk/cardano-node) | [8.7.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.7.2) | 8 December, 2023
 [Cardano RTView](https://github.com/input-output-hk/cardano-rt-view) | [0.3.0](https://github.com/input-output-hk/cardano-rt-view/releases/tag/0.3.0) | 15 January, 2021
 [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [13.1.0.0](https://github.com/input-output-hk/cardano-db-sync/releases/tag/13.1.0.0) | 20 January, 2023
 [Cardano Rosetta](https://github.com/input-output-hk/cardano-rosetta) | [2.1.0](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.1.0) | 30 January, 2023
 [Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql) | [8.0.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/8.0.0) | 7 February, 2023
 [Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app) | [1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.6.0) | 27 July, 2021
-[Cardano Transactions](https://github.com/input-output-hk/cardano-transactions) | [1.0.0](https://github.com/input-output-hk/cardano-transactions/releases/tag/1.0.0) | 21 April, 2020
-[Cardano Addresses](https://github.com/input-output-hk/cardano-addresses) | [3.12.0](https://github.com/input-output-hk/cardano-addresses/releases/tag/3.12.0)| 17 August, 2022
-[Cardano Coin Selection](https://github.com/input-output-hk/cardano-coin-selection) | [1.0.1](https://github.com/input-output-hk/cardano-coin-selection/releases/tag/v1.0.1) | 13 May, 2020
+[Cardano transactions](https://github.com/input-output-hk/cardano-transactions) | [1.0.0](https://github.com/input-output-hk/cardano-transactions/releases/tag/1.0.0) | 21 April, 2020
+[Cardano addresses](https://github.com/input-output-hk/cardano-addresses) | [3.12.0](https://github.com/input-output-hk/cardano-addresses/releases/tag/3.12.0)| 17 August, 2022
+[Cardano coin selection](https://github.com/input-output-hk/cardano-coin-selection) | [1.0.1](https://github.com/input-output-hk/cardano-coin-selection/releases/tag/v1.0.1) | 13 May, 2020
 [Bech32](https://github.com/input-output-hk/bech32) | [1.1.2](https://github.com/input-output-hk/bech32/releases/tag/v1.1.2) | 8 November, 2021
 [Cardano Wallet](https://github.com/input-output-hk/cardano-wallet) | [2022-12-14](https://github.com/input-output-hk/cardano-wallet/releases/tag/v2022-12-14) | 14 December, 2022
 
