--- a/content/15-tools/03-comp-matrix.mdx
+++ b/content/15-tools/03-comp-matrix.mdx
@@ -11,6 +11,7 @@ If you only require using the node, we recommend node version [8.1.2](https://gi
 
 | [Cardano Node](https://github.com/input-output-hk/cardano-node/releases) | [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [Smash](https://github.com/input-output-hk/smash/releases) | [Cardano Rosetta Server](https://github.com/input-output-hk/cardano-rosetta/releases) | [Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql/releases) | [Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app/releases) | [Cardano Wallet](https://github.com/input-output-hk/cardano-wallet/releases) | 
 |---|---|---|---|---|---|---|
+| __[8.7.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.7.2)__ (major update) |TBD|TBD|TBD|TBD|TBD|TBD|
 | __[8.1.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.2)__ (minor update) |TBD|TBD|TBD|TBD|TBD|TBD|
 | __[8.1.1](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.1)__ (bug fix) |TBD|TBD|TBD|TBD|TBD|TBD|
 | __[8.0.0](https://github.com/input-output-hk/cardano-node/releases/tag/8.0.0)__ (major) |TBD|TBD|TBD|TBD|TBD|TBD|
