--- a/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -6,17 +6,17 @@ Welcome to your one-stop shop for all things related to stake pool operations!
 
 This page helps you navigate through the technical information, resources, and updates needed to manage your pool/s operations efficiently, whether you're an experienced operator or just starting out.
 
-Last updated on: June 24, 2023
+Last updated on: December 9, 2023
 
-Current node version: [v.8.1.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.2)  
+Current node version: [v.8.7.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.7.2)  
 [Release notes](https://docs.cardano.org/tools/release-notes/)  
 [Compatibility matrix](https://docs.cardano.org/tools/comp-matrix/)  
 
 Access the [cardano-node](https://github.com/input-output-hk/cardano-node#overview-of-the-cardano-node-repository) GitHub repository for more information.
-## Latest node details
-This release is mainnet ready and has significant improvements at epoch boundary. All SPOs are strongly encouraged to update.  
 
-Node 8.1.2 is a minor release of the Cardano node, which updates the Plutus interpreter.
+## Latest node details
+
+Cardano node v.8.7.2 brings the CLI refactoring from SanchoNet to mainnet to allow teams ample time to update their components in preparation for v.9.0 release.
 
 ## Overview of Cardano environments
 ### Preview
