Delete outdated references in 06-cardano-tracking-tools.mdx

--- a/content/02-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/content/02-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -38,10 +38,8 @@ Figure 2. Block summary
 You can also search for specific epochs, transactions or blocks by pasting their
 IDs in the search field.
 
-Here is a list of other explorers to consider:
+Here are some other explorers to consider:
 
-- [AdaEx](https://adaex.org/)
-- [Adapools](https://adapools.org/)
 - [AdaStat](https://adastat.net/transactions)
 - [Cardanoscan](https://cardanoscan.io/transactions)
 - [Cexplorer](https://cexplorer.io/)
@@ -51,23 +49,19 @@ Here is a list of other explorers to consider:
 Cardano supports multi-asset creation and management. To see a list of created
 assets and tokens, you can use these tools:
 
-- [Adapools](https://adapools.org/)
 - [AdaStat (tokens)](https://adastat.net/tokens)
 - [Cardano Assets](https://cardanoassets.com/)
 - [Cardanoscan (tokens)](https://cardanoscan.io/tokens)
 - [Pool.pm (tokens)](https://pool.pm/tokens)
-- [Adapools (tokens)](https://adapools.org/token)
+- [Cexplorer (tokens)](https://cexplorer.io/token)
 
 ### Exploring stake pools
 
 To find a list of all registered stake pools, their tickers, pool names, and
 IDs, you can use these tools:
 
-- [Adapools](https://adapools.org/)
-- [ADAtainment](https://www.adatainment.com/index.php?page=home&lang=en)
 - [Cardano PoolTool](https://pooltool.io/)
 - [Cardanoscan (pools)](https://cardanoscan.io/pools)
 - [Pool.pm (pools)](https://pool.pm/search)
-- [POOLSTATS](https://poolstats.org/#)
    
 > Note: IOHK has developed a stake pool metadata aggregation server [(SMASH)](https://docs.cardano.org/operating-a-stake-pool/smash/) to provide the community with a list of verified stake pools with valid metadata. Smash is integrated with the Daedalus wallet, and users can see a list of valid stake pools in the delegation center tab.
