--- a/content/06-development-guidelines/01-installing-the-cardano-node.mdx
+++ b/content/06-development-guidelines/01-installing-the-cardano-node.mdx
@@ -15,7 +15,7 @@ Alternatively, if you want to build from source, there are two options
 available to you. Depending on your build tool preference, you can build from
 the source code using either of the following:
 
-- [cabal: building the node](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/install.md)
+- [Cabal: building the node](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/install.md)
 - [Nix: building the node](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/building-the-node-using-nix.md)
 
 Please refer to the [cardano-node releases page](https://github.com/input-output-hk/cardano-node/releases/latest) to ensure you are working with the latest version of the node.
