--- a/content/06-development-guidelines/03-node-tests.mdx
+++ b/content/06-development-guidelines/03-node-tests.mdx
@@ -9,15 +9,15 @@ Node tests are open source for Cardano node users running the CLI, SPOs, third-p
 
 ## References
 
-You can access [**Cardano node tests documentation here**](https://input-output-hk.github.io/cardano-node-tests/index.html). 
+You can access [**Cardano node tests documentation here**](https://tests.cardano.intersectmbo.org/). 
 
 Documentation includes such sections as:
 
--   [Getting started](https://input-output-hk.github.io/cardano-node-tests/readme.html#). Explains the process of setup, usage, test variables, and more.
--   [Test results](https://input-output-hk.github.io/cardano-node-tests/test_results.html). Includes details about Nightly tests, sync tests, and node tag testing.
--   [Process](https://input-output-hk.github.io/cardano-node-tests/process.html). Covers the types and levels of tests, quality control strategy, and user acceptance test strategy with more processes to be added soon.
--   [How-to guides](https://input-output-hk.github.io/cardano-node-tests/how-tos.html). Guides on starting a local cluster, testing MIR certificate submission, stake credentials, and SMASH usage.
+-   [Getting started](https://tests.cardano.intersectmbo.org/readme.html). Explains the process of setup, usage, test variables, and more.
+-   [Test results](https://tests.cardano.intersectmbo.org/test_results.html). Includes details about Nightly tests, sync tests, and node tag testing.
+-   [Process](https://tests.cardano.intersectmbo.org/process.html). Covers the types and levels of tests, quality control strategy, and user acceptance test strategy with more processes to be added soon.
+-   [How-to guides](https://tests.cardano.intersectmbo.org/how-tos.html). Guides on starting a local cluster, testing MIR certificate submission, stake credentials, and SMASH usage.
 
 **Contributing to the Cardano node tests repository**
 
-Community contributions are highly appreciated. For more details and tips, [see these contribution guidelines](https://input-output-hk.github.io/cardano-node-tests/contribute/contributing.html).
+Community contributions are highly appreciated. For more details and tips, [see these contribution guidelines](https://tests.cardano.intersectmbo.org/contribute/contributing.html).
