Fix a link to node API docs

--- a/content/12-smart-contracts/01-plutus/02-plutus-resources.mdx
+++ b/content/12-smart-contracts/01-plutus/02-plutus-resources.mdx
@@ -54,7 +54,7 @@ Plutus Core, Cardano’s scripting language, is written in Haskell. To use Plutu
 
 **Developer resources**:
 
--   [Cardano node API documentation](https://input-output-hk.github.io/cardano-node/): the Haddock-generated documentation for the Cardano node API.
+-   [Cardano node API documentation](https://github.com/IntersectMBO/cardano-node?tab=readme-ov-file#api-documentation): the Haddock-generated documentation for the Cardano node API.
     
 ## Plutus user documentation
 
