Reviewed, minor changes

--- a/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -6,7 +6,7 @@ Welcome to your one-stop shop for all things related to stake pool operations!
 
 This page helps you navigate through the technical information, resources, and updates needed to manage your pool/s operations efficiently, whether you're an experienced operator or just starting out.
 
-Last updated on: January 10, 2023
+Last updated on: January 10, 2024
 
 Current node version: [v.8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3)  
 [Release notes](https://docs.cardano.org/tools/release-notes/)  
@@ -16,7 +16,7 @@ Access the [cardano-node](https://github.com/input-output-hk/cardano-node#overvi
 
 ## Latest node details
 
-Cardano node v.8.7.3 addresses a minor fix in the `ouroboros-network`. It resolves an issue within the `outbound-governor` where, under rare but reproducible conditions, it could lose track of certain outbound connections, such as a local root or another node.
+Cardano node v.8.7.3 addresses a minor fix in the `ouroboros-network`. It resolves an issue in the `outbound-governor` where, under rare but reproducible conditions, it could lose track of certain outbound connections, such as a local root or another node.
 
 ## Overview of Cardano environments
 ### Preview
