--- a/content/15-tools/03-comp-matrix.mdx
+++ b/content/15-tools/03-comp-matrix.mdx
@@ -7,7 +7,7 @@ metaTitle: Compatibility matrix
 
 This Cardano components compatibility matrix shows the runtime Cardano component dependencies on a particular version of [cardano-node](https://github.com/input-output-hk/cardano-node/releases). (It does not reflect any stacks.) The compatibility matrix should be read in conjunction with the Cardano component dependencies definition.
 
-If you only require using the node, we recommend node version [8.1.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.2). However, if you need to use all the compatible components, we recommend using version [1.35.7](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.7).
+If you only require using the node, we recommend the latest node version. However, if you need to use all the compatible components, we recommend using version [1.35.7](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.7).
 
 | [Cardano Node](https://github.com/input-output-hk/cardano-node/releases) | [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [Smash](https://github.com/input-output-hk/smash/releases) | [Cardano Rosetta Server](https://github.com/input-output-hk/cardano-rosetta/releases) | [Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql/releases) | [Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app/releases) | [Cardano Wallet](https://github.com/input-output-hk/cardano-wallet/releases) | 
 |---|---|---|---|---|---|---|
