--- a/content/01-introduction.mdx
+++ b/content/01-introduction.mdx
@@ -19,4 +19,4 @@ Cardano has been designed with security as one of its founding principles. It is
 
 Cardano is developing a smart contract platform which seeks to deliver more advanced features than any protocol previously developed and will serve as a stable and secure platform for the development of enterprise-level dApps. In the near future, Cardano will use a democratic governance system that allows the project to evolve over time, and fund itself in a sustainable way through a visionary treasury system. 
 
-You can read more about Cardano on the [official Cardano website](http://cardano.org/) and watch a summary of the mission of Cardano in this [explainer video](https://www.youtube.com/watch?v=l_Nv0-PVrnM/). 
+You can read more about Cardano on the [official Cardano website](https://cardano.org/) and watch a summary of the mission of Cardano in this [explainer video](https://www.youtube.com/watch?v=l_Nv0-PVrnM/). 
