--- a/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -3,17 +3,17 @@ title: Create and fund accounts
 metaTitle: Create and fund accounts
 ---
 
-### Prerequisites:
+## Prerequisites:
 
 1. Ability to make an HTTP request.
 
-# How to fund your main chain account with test ada tokens
+## How to fund your main chain account with testnet ada tokens
 
 In this tutorial, you will learn how to claim test ada tokens on the main chain testnet (to pay for main chain transaction fees).
 
 *Note: This is a dedicated Cardano testnet separate from the preview and pre-production testing environments.*
 
-## Generating keys
+### Generating keys
 
 To generate keys for the Cardano testnet you need the `cardano-cli` [binary](https://github.com/input-output-hk/cardano-node/releases/).
 Open a shell and run the following commands:
@@ -38,7 +38,7 @@ These steps are based on this [keys and adresses creation tutorial](https://gith
 
 Request test ada using a public Cardano testnet faucet: https://docs.cardano.org/cardano-testnet/tools/faucet/
 
-# How to fund your sidechain account with test SC_token
+### Funding your sidechain account with test SC_token
 
 Create a sidechain account using a compatible Web3 wallet connected to the EVM sidechain test network (ex: MetaMask).
 
