--- a/content/13-community/06-getting-support.mdx
+++ b/content/13-community/06-getting-support.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting Support
-metaTitle: Getting Support
+title: Getting support
+metaTitle: Getting support
 ---
 
 Your feedback is important because it helps us improve [Cardano](https://github.com/input-output-hk/cardano-documentation/pull/163). We have an
@@ -8,7 +8,7 @@ active Telegram channel and a dedicated
 [support page](https://iohk.zendesk.com/) to help you with your issues and
 questions.
 
-# Telegram Channel: Cardano Developers
+## Telegram channel: Cardano Developers
 
 You can reach the developers in the Cardano community using these:
 - [Cardano Forums](https://forum.cardano.org/c/developers/)
@@ -17,7 +17,7 @@ You can reach the developers in the Cardano community using these:
   - [Group for Development queries](https://t.me/CardanoDevelopersOfficial)
   - [Group for Stake Pool Operation queries](https://t.me/CardanoStakePoolWorkgroup).
 
-# Where can I get technical support?
+## Where can I get technical support?
 
 To contact IOHK Technical Support, please submit a request using the [Submit a request form](https://iohk.zendesk.com/hc/en-us/requests/new). On that page you can also click the Support button at the bottom right of your screen. The request form is better if you have a lot to write.
 
