--- a/content/04-explore-cardano/06-fee-structure.mdx
+++ b/content/04-explore-cardano/06-fee-structure.mdx
@@ -10,7 +10,7 @@ The Cardano environment is unique in the way it handles fees, as fees do not go
 directly to the block producer. Instead, they are pooled and then distributed to
 all pools that created blocks during an epoch.
 
-There currently are no fees for the memory cost of tracking the accumulated
+Currently, there are no fees for the memory cost of tracking the accumulated
 chain state, in particular, UTXO.
 
 ## Preventing economic attacks
