--- a/content/09-cardano-sidechains/01-basics/02-ouroboros-description.mdx
+++ b/content/09-cardano-sidechains/01-basics/02-ouroboros-description.mdx
@@ -44,7 +44,7 @@ Within the Ouroboros protocol, each network node stores a copy of the transactio
 
 ### Ouroboros BFT
 
-Ouroboros BFT (Byzantine Fault Tolerance) is a simple protocol used by Cardano during the Byron reboot, which was the transition of the old Cardano codebase to the new. Ouroboros BFT helped prepare Cardano's network for Shelley's release and, with that, its decentralization. This is the version of Ourorobos that is implemented in the Cardano EVM sidechain. 
+Ouroboros BFT is a simple protocol used by Cardano during the Byron reboot, which was the transition of the old Cardano codebase to the new. Ouroboros BFT helped prepare Cardano's network for Shelley's release and, with that, its decentralization. This is the version of Ourorobos that is implemented in the Cardano EVM sidechain. 
 
 Rather than requiring nodes to be online all of the time, Ouroboros BFT assumes a federated network of servers – the blockchain – and synchronous communication between the servers, providing ledger consensus in a simpler and more deterministic manner.  
 
