--- a/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -40,7 +40,7 @@ Request test ada using a public Cardano testnet faucet: https://docs.cardano.org
 
 ### Funding your sidechain account with test SC_token
 
-Create a sidechain account using a compatible Web3 wallet connected to the EVM sidechain test network (ex: MetaMask).
+Create a sidechain account using a compatible Web3 wallet connected to the EVM sidechain test network (eg MetaMask).
 
 - [Working with MetaMask](/cardano-sidechains/proof-of-concept-evm-sidechain/metamask/).
 
