Update community content 01-links.mdx

--- a/content/05-cardano-testnet/07-resources/01-links.mdx
+++ b/content/05-cardano-testnet/07-resources/01-links.mdx
@@ -36,6 +36,10 @@ IOG’s researchers and engineers often post on [IO blog page](https://iohk.io/e
 * [Video guide: how to create a Cardano stake pool](https://www.youtube.com/playlist?list=PLyThQPJpttTJ4r9wUdlWi1DMty4nAT85d)
 * [Building a Cardano stake pool using CNTools](https://www.youtube.com/watch?v=UN4rSRr7LDk&feature=youtu.be)
 * [Vasil hard fork changes explained](https://www.youtube.com/watch?v=Tsp9F23dBiM) by dcSpark
+* [CoinCashew guide: how to build a Cardano stake pool](https://www.coincashew.com/coins/overview-ada/guide-how-to-build-a-haskell-stakepool-node)
+* [StakePoolOperator scripts](https://github.com/gitmachtl/scripts)
+* [Plutus Pioneers program notes](https://plutus-pioneer-program.readthedocs.io/en/latest/plutus_pioneer_program.html)
+* [Developer resources on Essential Cardano](https://www.essentialcardano.io/developer)
 
 If you have produced material and would like to contribute your content for inclusion on this page, please raise a pull request.
 
